--- a/src/container/chat/styles.css
+++ b/src/container/chat/styles.css
@@ -1,7 +1,8 @@
 .sidebar-container{
-    height: 85vh;
-    border: 1px solid black;
+    height: 86vh;
+    width: 100%;
 }
 
 .chat-container{
+    
 }
